--- a/notebook/Ensambling.ipynb
+++ b/notebook/Ensambling.ipynb
@@ -361,24 +361,33 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "starting values:  {'training_set_len': 533, 'minibatch_size': 8, 'max_epochs': 5, 'retrainig_es_error': 0.01087478308764089, 'error_increase_tolerance': 1e-06, 'patience': 5, 'min_epochs': 150, 'learning_rate': 0.01375, 'lr_decay_tau': 200, 'eta_tau': 0.0001375, 'lambda_tikhonov': 1e-09, 'alpha_momentum': 0.85, 'nesterov': False, 'adamax': False, 'adamax_learning_rate': 0.01, 'exp_decay_rate_1': 0.9, 'exp_decay_rate_2': 0.999, 'best_validation_training_error': inf, 'epochs': 0, 'total_train_time': datetime.timedelta(days=-1, seconds=86399, microseconds=999986), 'mean_epoch_train_time': 0, 'units_weights': {41: [], 40: [], 39: [], 38: [], 37: [], 36: [], 35: [], 34: [], 33: [], 32: [], 31: [], 30: [], 29: [], 28: [], 27: [], 26: [], 25: [], 24: [], 23: [], 22: [], 21: [], 20: [], 19: [], 18: [], 17: [], 16: [], 15: [], 14: [], 13: [], 12: [], 11: [], 10: [], 44: [], 43: [], 42: []}, 'units_weights_batch': {}, 'training_pred': [], 'validation_pred': [], 'training_mean_squared_error': [], 'validation_mean_squared_error': [], 'training_mean_euclidean_error': [], 'validation_mean_euclidean_error': []}\n"
+      "starting values:  {'training_set_len': 533, 'minibatch_size': 8, 'max_epochs': 50, 'retrainig_es_error': 0.01087478308764089, 'error_increase_tolerance': 1e-06, 'patience': 5, 'min_epochs': 150, 'learning_rate': 0.01375, 'lr_decay_tau': 200, 'eta_tau': 0.0001375, 'lambda_tikhonov': 1e-09, 'alpha_momentum': 0.85, 'nesterov': False, 'adamax': False, 'adamax_learning_rate': 0.01, 'exp_decay_rate_1': 0.9, 'exp_decay_rate_2': 0.999, 'best_validation_training_error': inf, 'epochs': 0, 'total_train_time': datetime.timedelta(days=-1, seconds=86399, microseconds=999989), 'mean_epoch_train_time': 0, 'units_weights': {41: [], 40: [], 39: [], 38: [], 37: [], 36: [], 35: [], 34: [], 33: [], 32: [], 31: [], 30: [], 29: [], 28: [], 27: [], 26: [], 25: [], 24: [], 23: [], 22: [], 21: [], 20: [], 19: [], 18: [], 17: [], 16: [], 15: [], 14: [], 13: [], 12: [], 11: [], 10: [], 44: [], 43: [], 42: []}, 'units_weights_batch': {}, 'training_pred': [], 'validation_pred': [], 'training_mean_squared_error': [], 'validation_mean_squared_error': [], 'training_mean_euclidean_error': [], 'validation_mean_euclidean_error': []}\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[1/5] tr time: 0:00:01.037466 | mean_squared_error: tr=0.2546714084587767 val=0.24576175513759616 | | mean_euclidean_error: tr=0.457335619662482 val=0.44652588032600543 | \n",
-      "[2/5] tr time: 0:00:00.975585 | mean_squared_error: tr=0.14757881612345222 val=0.15511207220526718 | | mean_euclidean_error: tr=0.34534975259507905 val=0.3528465428535253 | \n",
-      "[3/5] tr time: 0:00:00.979538 | mean_squared_error: tr=0.08215031254093824 val=0.08828805267920853 | | mean_euclidean_error: tr=0.24562796163524866 val=0.2559119069902458 | \n",
-      "[4/5] tr time: 0:00:00.986510 | mean_squared_error: tr=0.08622350314580698 val=0.09934362732137704 | | mean_euclidean_error: tr=0.254841128926041 val=0.2710562203106955 | \n",
-      "[5/5] tr time: 0:00:01.209526 | mean_squared_error: tr=0.057495526419809456 val=0.06314923674572985 | | mean_euclidean_error: tr=0.20891515756791867 val=0.21613764700366875 | \n",
-      "starting values:  {'training_set_len': 533, 'minibatch_size': 8, 'max_epochs': 5, 'retrainig_es_error': 0.01087478308764089, 'error_increase_tolerance': 1e-06, 'patience': 5, 'min_epochs': 150, 'learning_rate': 0.01375, 'lr_decay_tau': 200, 'eta_tau': 0.0001375, 'lambda_tikhonov': 1e-09, 'alpha_momentum': 0.85, 'nesterov': False, 'adamax': False, 'adamax_learning_rate': 0.01, 'exp_decay_rate_1': 0.9, 'exp_decay_rate_2': 0.999, 'best_validation_training_error': inf, 'epochs': 0, 'total_train_time': datetime.timedelta(days=-1, seconds=86399, microseconds=999997), 'mean_epoch_train_time': 0, 'units_weights': {41: [], 40: [], 39: [], 38: [], 37: [], 36: [], 35: [], 34: [], 33: [], 32: [], 31: [], 30: [], 29: [], 28: [], 27: [], 26: [], 25: [], 24: [], 23: [], 22: [], 21: [], 20: [], 19: [], 18: [], 17: [], 16: [], 15: [], 14: [], 13: [], 12: [], 11: [], 10: [], 44: [], 43: [], 42: []}, 'units_weights_batch': {}, 'training_pred': [], 'validation_pred': [], 'training_mean_squared_error': [], 'validation_mean_squared_error': [], 'training_mean_euclidean_error': [], 'validation_mean_euclidean_error': []}\n",
-      "[1/5] tr time: 0:00:01.238084 | mean_squared_error: tr=0.4066745336109922 val=0.45667066086649816 | | mean_euclidean_error: tr=0.5767912956763755 val=0.6100412537290906 | \n",
-      "[2/5] tr time: 0:00:01.044262 | mean_squared_error: tr=0.24832870674813132 val=0.26556560531121076 | | mean_euclidean_error: tr=0.44377365304833405 val=0.4576612521173237 | \n",
-      "[3/5] tr time: 0:00:00.986250 | mean_squared_error: tr=0.11811826187302003 val=0.1321907628378369 | | mean_euclidean_error: tr=0.3045060269335697 val=0.32157664238933487 | \n",
-      "[4/5] tr time: 0:00:01.000778 | mean_squared_error: tr=0.15960620904892306 val=0.16607245391606956 | | mean_euclidean_error: tr=0.3674900628461849 val=0.37260780112493314 | \n",
-      "[5/5] tr time: 0:00:00.978584 | mean_squared_error: tr=0.10065171941639951 val=0.10563581957311909 | | mean_euclidean_error: tr=0.2960421717321567 val=0.30579569660971045 | \n"
+      "[1/50] tr time: 0:00:01.078228 | mean_squared_error: tr=0.2831167616125601 val=0.3286243322022858 | | mean_euclidean_error: tr=0.47150901633606856 val=0.5050137351143005 | \n",
+      "[2/50] tr time: 0:00:01.023385 | mean_squared_error: tr=0.12390329721398141 val=0.13760727183899796 | | mean_euclidean_error: tr=0.31447675844927186 val=0.32787514486968966 | \n",
+      "[3/50] tr time: 0:00:00.986226 | mean_squared_error: tr=0.10080234295183402 val=0.11368594862616774 | | mean_euclidean_error: tr=0.28162112355400626 val=0.2958030711641574 | \n",
+      "[4/50] tr time: 0:00:00.993035 | mean_squared_error: tr=0.08267748225878771 val=0.08960869792957236 | | mean_euclidean_error: tr=0.24926459915776375 val=0.2629729727966405 | \n",
+      "[5/50] tr time: 0:00:00.969950 | mean_squared_error: tr=0.0689878455188039 val=0.07712465304255144 | | mean_euclidean_error: tr=0.23124202840379104 val=0.24162055613657446 | \n",
+      "[6/50] tr time: 0:00:00.977511 | mean_squared_error: tr=0.0619373150324359 val=0.0640352950642344 | | mean_euclidean_error: tr=0.21110635695527968 val=0.21975787751617137 | \n",
+      "[7/50] tr time: 0:00:00.987254 | mean_squared_error: tr=0.04740985573803462 val=0.049897488756651016 | | mean_euclidean_error: tr=0.1904801173640407 val=0.19566363551805488 | \n",
+      "[8/50] tr time: 0:00:01.001464 | mean_squared_error: tr=0.04509084137676601 val=0.05121367505194213 | | mean_euclidean_error: tr=0.1822201806849027 val=0.1946063172417768 | \n",
+      "[9/50] tr time: 0:00:00.976786 | mean_squared_error: tr=0.046313230663188786 val=0.04841608752350456 | | mean_euclidean_error: tr=0.19218164856261602 val=0.19779570351036813 | \n",
+      "[10/50] tr time: 0:00:01.029420 | mean_squared_error: tr=0.050343160776342516 val=0.061222898813845995 | | mean_euclidean_error: tr=0.19444813532586464 val=0.21722372032765613 | \n",
+      "[11/50] tr time: 0:00:01.040535 | mean_squared_error: tr=0.06318892441211328 val=0.06978429355338502 | | mean_euclidean_error: tr=0.21328638664569874 val=0.22549093160648923 | \n",
+      "[12/50] tr time: 0:00:01.008499 | mean_squared_error: tr=0.05975692928896615 val=0.06194126930177193 | | mean_euclidean_error: tr=0.21232754422977415 val=0.21661104840233236 | \n",
+      "[13/50] tr time: 0:00:01.133713 | mean_squared_error: tr=0.06663013516562649 val=0.06955144169092636 | | mean_euclidean_error: tr=0.22365511836031982 val=0.22763595580434884 | \n",
+      "[14/50] tr time: 0:00:01.340806 | mean_squared_error: tr=0.05234409386087764 val=0.0551521947521175 | | mean_euclidean_error: tr=0.20036585602759407 val=0.20109454443411676 | \n",
+      "[15/50] tr time: 0:00:01.176226 | mean_squared_error: tr=0.05176245053982871 val=0.05339484374492679 | | mean_euclidean_error: tr=0.19333810421534578 val=0.19422194873209353 | \n",
+      "[16/50] tr time: 0:00:01.032133 | mean_squared_error: tr=0.07023314527105393 val=0.07886933000601029 | | mean_euclidean_error: tr=0.22048634320448637 val=0.2305615124032475 | \n",
+      "[17/50] tr time: 0:00:01.204911 | mean_squared_error: tr=0.04734282513405109 val=0.050871597455363064 | | mean_euclidean_error: tr=0.1914699261032947 val=0.19467404301058655 | \n",
+      "[18/50] tr time: 0:00:01.211307 | mean_squared_error: tr=0.046533819939703444 val=0.052353402684264194 | | mean_euclidean_error: tr=0.1836951133508865 val=0.1926124749242354 | \n",
+      "[19/50] tr time: 0:00:01.068501 | mean_squared_error: tr=0.07617400501745362 val=0.08331971549264038 | | mean_euclidean_error: tr=0.23058307196725888 val=0.23362327820444814 | \n",
+      "[20/50] tr time: 0:00:01.268140 | mean_squared_error: tr=0.051373074922528864 val=0.05467906367939726 | | mean_euclidean_error: tr=0.19577953087738084 val=0.19739727532216986 | \n"
      ]
     }
    ],
@@ -392,8 +401,7 @@
     "predictions_accumul_tr = np.zeros((max_epochs, training_len, TR_OUTPUT))\n",
     "predictions_accumul_val = np.zeros((max_epochs, test_len, TR_OUTPUT))\n",
     "\n",
-    "index = 5\n",
-    "for i in range(index, index + n_models):\n",
+    "for i in range(n_models):\n",
     "    \n",
     "    tr = get_new_tr_vl(tr_normalized, 533, gen)\n",
     "    NN = NeuralNetwork(sigmoid_l1, -0.75, 0.75, True, (i + 999989999))\n",
@@ -434,13 +442,33 @@
     "\n",
     "    \n",
     "    mod.append([NN, stats, tr])\n",
-    "    with open('../data/net/models_6_ens_retr_giacomo/model_' + str(i) + '.json', 'w+') as file:\n",
+    "    with open('../data/net/models_6_ens/model_' + str(i) + '.json', 'w+') as file:\n",
     "            file.write(NN.toJSON())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(5, 800, 3)"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "predictions_accumul_tr.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -449,7 +477,7 @@
     "    for i in range(len(list_mod)):\n",
     "        \n",
     "        dummy = {}\n",
-    "        dummy['nn_file_name'] = '../data/net/models_6_ens_retr_giacomo/model_' + str(i) + '.json'\n",
+    "        dummy['nn_file_name'] = '../data/net/models_6_ens/model_' + str(i) + '.json'\n",
     "        dummy['index'] = i\n",
     "        dummy['model'] = list_mod[i][0]\n",
     "        dummy['stats'] = list_mod[i][1]\n",
@@ -473,7 +501,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -482,23 +510,105 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "KeyError",
+     "evalue": "'training_pred_mean_squared_error'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[21], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m mes \u001b[38;5;129;01min\u001b[39;00m met:\n\u001b[0;32m----> 2\u001b[0m     \u001b[38;5;28mprint\u001b[39m(np\u001b[38;5;241m.\u001b[39marray(\u001b[43mmod\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;241;43m0\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;241;43m1\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mtraining_pred_\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m \u001b[49m\u001b[38;5;241;43m+\u001b[39;49m\u001b[43m \u001b[49m\u001b[43mmes\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[38;5;18;43m__name__\u001b[39;49m\u001b[43m]\u001b[49m \u001b[38;5;241m+\u001b[39m [mod[\u001b[38;5;241m0\u001b[39m][\u001b[38;5;241m1\u001b[39m][\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mtraining_pred_\u001b[39m\u001b[38;5;124m'\u001b[39m \u001b[38;5;241m+\u001b[39m mes\u001b[38;5;241m.\u001b[39m\u001b[38;5;18m__name__\u001b[39m][\u001b[38;5;241m-\u001b[39m\u001b[38;5;241m1\u001b[39m]]\u001b[38;5;241m*\u001b[39m(max_epochs \u001b[38;5;241m-\u001b[39m mod[\u001b[38;5;241m0\u001b[39m][\u001b[38;5;241m1\u001b[39m][\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mepochs\u001b[39m\u001b[38;5;124m'\u001b[39m]))[\u001b[38;5;241m0\u001b[39m][\u001b[38;5;241m0\u001b[39m])\n",
+      "\u001b[0;31mKeyError\u001b[0m: 'training_pred_mean_squared_error'"
+     ]
+    }
+   ],
+   "source": [
+    "for mes in met:\n",
+    "    print(np.array(mod[0][1]['training_pred_' + mes.__name__] + [mod[0][1]['training_pred_' + mes.__name__][-1]]*(max_epochs - mod[0][1]['epochs']))[0][0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 0.55812065,  0.87903716, -1.03632857])"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mod[0][0].predict(tr_normalized[0,:TR_INPUT])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 0.6397029 ,  0.93871728, -1.09387948])"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "predictions_accumul_tr[4][0]/2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open('../data/net/models_6_ens_retr_giacomo/models.json', 'w+') as file:\n",
+    "with open('../data/net/models_6_ens/models.json', 'w+') as file:\n",
     "    save_obj(models_list, file)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1.0078344490909792"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "predictions_accumul_val[0][4][0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open('../data/net/models_6_ens_retr_giacomo/ens_curves_tr.json', 'w+') as file:\n",
+    "with open('../data/net/models_6_ens/ens_curves_tr.json', 'w+') as file:\n",
     "    file.write(json.dumps(predictions_accumul_tr.tolist()))\n",
-    "with open('../data/net/models_6_ens_retr_giacomo/ens_curves_test.json', 'w+') as file:\n",
+    "with open('../data/net/models_6_ens/ens_curves_test.json', 'w+') as file:\n",
     "    file.write(json.dumps(predictions_accumul_val.tolist()))"
    ]
   }
