--- a/notebook/Ensambling_retr.ipynb
+++ b/notebook/Ensambling_retr.ipynb
@@ -589,7 +589,25 @@
       "[29/50] tr time: 0:00:00.898892 | mean_squared_error: tr=0.03235106536809894 val=-1 | | mean_euclidean_error: tr=0.15644737462847802 val=-1 | \n",
       "[30/50] tr time: 0:00:01.016797 | mean_squared_error: tr=0.03367402612071778 val=-1 | | mean_euclidean_error: tr=0.15874883572017812 val=-1 | \n",
       "[31/50] tr time: 0:00:00.923452 | mean_squared_error: tr=0.031667122814532725 val=-1 | | mean_euclidean_error: tr=0.15355833815719935 val=-1 | \n",
-      "[32/50] tr time: 0:00:00.912874 | mean_squared_error: tr=0.06115080375350284 val=-1 | | mean_euclidean_error: tr=0.2144232271436934 val=-1 | \n"
+      "[32/50] tr time: 0:00:00.912874 | mean_squared_error: tr=0.06115080375350284 val=-1 | | mean_euclidean_error: tr=0.2144232271436934 val=-1 | \n",
+      "[33/50] tr time: 0:00:00.842288 | mean_squared_error: tr=0.06200194565875537 val=-1 | | mean_euclidean_error: tr=0.21336157953929505 val=-1 | \n",
+      "[34/50] tr time: 0:00:00.934040 | mean_squared_error: tr=0.031875935576837405 val=-1 | | mean_euclidean_error: tr=0.15764970926774208 val=-1 | \n",
+      "[35/50] tr time: 0:00:01.022535 | mean_squared_error: tr=0.03357901914006192 val=-1 | | mean_euclidean_error: tr=0.16171823922228268 val=-1 | \n",
+      "[36/50] tr time: 0:00:00.878151 | mean_squared_error: tr=0.029361885770134967 val=-1 | | mean_euclidean_error: tr=0.15091503525543334 val=-1 | \n",
+      "[37/50] tr time: 0:00:00.936931 | mean_squared_error: tr=0.03380216264420766 val=-1 | | mean_euclidean_error: tr=0.16004627706753727 val=-1 | \n",
+      "[38/50] tr time: 0:00:01.002141 | mean_squared_error: tr=0.027378814884311646 val=-1 | | mean_euclidean_error: tr=0.14416580414627578 val=-1 | \n",
+      "[39/50] tr time: 0:00:00.910854 | mean_squared_error: tr=0.02835119339693405 val=-1 | | mean_euclidean_error: tr=0.14680317765356782 val=-1 | \n",
+      "[40/50] tr time: 0:00:00.882679 | mean_squared_error: tr=0.036640764627795565 val=-1 | | mean_euclidean_error: tr=0.17185022782226358 val=-1 | \n",
+      "[41/50] tr time: 0:00:00.911501 | mean_squared_error: tr=0.029911501711673158 val=-1 | | mean_euclidean_error: tr=0.15014253675593908 val=-1 | \n",
+      "[42/50] tr time: 0:00:00.876197 | mean_squared_error: tr=0.025102150154107623 val=-1 | | mean_euclidean_error: tr=0.14091478913301095 val=-1 | \n",
+      "[43/50] tr time: 0:00:00.853843 | mean_squared_error: tr=0.0315523356633435 val=-1 | | mean_euclidean_error: tr=0.15727605451802856 val=-1 | \n",
+      "[44/50] tr time: 0:00:00.888392 | mean_squared_error: tr=0.03391888875306571 val=-1 | | mean_euclidean_error: tr=0.16208764827982572 val=-1 | \n",
+      "[45/50] tr time: 0:00:00.868507 | mean_squared_error: tr=0.04185936406790599 val=-1 | | mean_euclidean_error: tr=0.17818641501330965 val=-1 | \n",
+      "[46/50] tr time: 0:00:00.857844 | mean_squared_error: tr=0.03586889651980526 val=-1 | | mean_euclidean_error: tr=0.16765081518717126 val=-1 | \n",
+      "[47/50] tr time: 0:00:00.851712 | mean_squared_error: tr=0.024751218887391097 val=-1 | | mean_euclidean_error: tr=0.14122109042598574 val=-1 | \n",
+      "[48/50] tr time: 0:00:00.901043 | mean_squared_error: tr=0.04666835407103458 val=-1 | | mean_euclidean_error: tr=0.19203791006422494 val=-1 | \n",
+      "[49/50] tr time: 0:00:00.895415 | mean_squared_error: tr=0.03955903565055503 val=-1 | | mean_euclidean_error: tr=0.17585752794838455 val=-1 | \n",
+      "[50/50] tr time: 0:00:00.847874 | mean_squared_error: tr=0.03250778806759925 val=-1 | | mean_euclidean_error: tr=0.1642475610938917 val=-1 | \n"
      ]
     }
    ],
@@ -645,7 +663,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -672,7 +690,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -681,7 +699,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -691,7 +709,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
