--- a/notebook/Ensambling_retr.ipynb
+++ b/notebook/Ensambling_retr.ipynb
@@ -12,10 +12,9 @@
     "import os\n",
     "import pandas as pd\n",
     "import plotly.express as px\n",
-    "from sklearn.preprocessing import MinMaxScaler, StandardScaler\n",
+    "from sklearn.preprocessing import StandardScaler\n",
     "import seaborn as sns\n",
     "import ast\n",
-    "import warnings\n",
     "\n",
     "sys.path.append(os.path.abspath('../src/'))\n",
     "from ActivationFunctions import *\n",
@@ -703,7 +702,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open('../data/net/models_6_ens_retr_giacomo/models.json', 'w+') as file:\n",
+    "with open('../data/net/models_6_ens_final_retr/models.json', 'w+') as file:\n",
     "    save_obj(models_list, file)"
    ]
   },
@@ -713,7 +712,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open('../data/net/models_6_ens_retr_giacomo/ens_curves_tr.json', 'w+') as file:\n",
+    "with open('../data/net/models_6_ens_final_retr/ens_curves_tr.json', 'w+') as file:\n",
     "    file.write(json.dumps(predictions_accumul_tr.tolist()))"
    ]
   }
