--- a/notebook/test.ipynb
+++ b/notebook/test.ipynb
@@ -487,6 +487,51 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "interesting_model = load_obj('../data/net/models_6_ens/models.json')\n",
+    "interesting_model_2 = load_obj('../data/net/models_6_ens_retr_giacomo/models.json')\n",
+    "interesting_model_3 = load_obj('../data/net/models_6_ens_retr_jacopo/models.json')\n",
+    "\n",
+    "scarto = 8\n",
+    "for i, el in enumerate(interesting_model_2):\n",
+    "    el['nn_file_name'] = '../data/net/models_6_ens/model_' + str(i + scarto) + '.json'\n",
+    "    el['index'] = i + scarto\n",
+    "interesting_model += interesting_model_2\n",
+    "scarto = 8 + 6\n",
+    "for i, el in enumerate(interesting_model_3):\n",
+    "    el['nn_file_name'] = '../data/net/models_6_ens/model_' + str(i + scarto) + '.json'\n",
+    "    el['index'] = i + scarto\n",
+    "interesting_model += interesting_model_3\n",
+    "\n",
+    "with open('../data/net/models_6_ens/ens_curves_tr.json', 'r') as file:\n",
+    "    predictions_accumul_tr = np.array(json.load(file))/n_models\n",
+    "with open('../data/net/models_6_ens/ens_curves_test.json', 'r') as file:\n",
+    "    predictions_accumul_test = np.array(json.load(file))/n_models\n",
+    "\n",
+    "with open('../data/net/models_6_ens_retr_giacomo/ens_curves_tr.json', 'r') as file:\n",
+    "    predictions_accumul_tr += np.array(json.load(file))/n_models\n",
+    "with open('../data/net/models_6_ens_retr_giacomo/ens_curves_test.json', 'r') as file:\n",
+    "    predictions_accumul_test += np.array(json.load(file))/n_models\n",
+    "    \n",
+    "with open('../data/net/models_6_ens_retr_jacopo/ens_curves_tr.json', 'r') as file:\n",
+    "    predictions_accumul_tr += np.array(json.load(file))/n_models\n",
+    "with open('../data/net/models_6_ens_retr_jacopo/ens_curves_test.json', 'r') as file:\n",
+    "    predictions_accumul_test += np.array(json.load(file))/n_models\n",
+    "    \n",
+    "with open('../data/net/models_6_ens/models.json', 'w+') as file:\n",
+    "    save_obj(interesting_model, file)\n",
+    "    \n",
+    "with open('../data/net/models_6_ens/ens_curves_tr.json', 'w+') as file:\n",
+    "    file.write(json.dumps(predictions_accumul_tr.tolist()))\n",
+    "with open('../data/net/models_6_ens/ens_curves_test.json', 'w+') as file:\n",
+    "    file.write(json.dumps(predictions_accumul_test.tolist()))"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
    "outputs": [
