--- a/notebook/Ensembling.ipynb
+++ b/notebook/Ensembling.ipynb
@@ -344,7 +344,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "n_models = 8\n",
+    "n_models = 32\n",
     "tr_len = 533\n",
     "max_epochs = 500\n",
     "mod = []\n",
@@ -356,8 +356,8 @@
     "for i in range(n_models):\n",
     "    \n",
     "    tr = get_new_tr_vl(tr_normalized, 533, gen)\n",
-    "    NN = NeuralNetwork(sigmoid_l1, -0.75, 0.75, True, (i + 999989999))\n",
-    "    stats = NN.train(training_set =tr, \n",
+    "    NN = NeuralNetwork(sigmoid_l1, -0.75, 0.75, True, (i + 69))\n",
+    "    stats = NN.train(training_set = tr, \n",
     "                    validation_set = test_normalized, \n",
     "                    \n",
     "                    batch_size= 8, \n",
